k8s-new-services-deployment.yaml
###################################
# score
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: score
  labels:
    app: score
spec:
  replicas: 1
  selector:
    matchLabels:
      app: score
  template:
    metadata:
      labels:
        app: score
    spec:
      containers:
        - name: score
          image: us-central1-docker.pkg.dev/tfg-demo-318500/delivery-miso-grupo-17/score:1.0
          ports:
            - containerPort: 3020
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: servicio-score
  annotations:
    cloud.google.com/backend-config: '{"default": "delivery-score-config"}'
spec:
  type: NodePort
  selector:
    app: score
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3020
      nodePort: 31020
---
###################################
# post_rf003_management
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-rf003-management
  labels:
    app: post-rf003-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-rf003-management
  template:
    metadata:
      labels:
        app: post-rf003-management
    spec:
      containers:
        - name: post-rf003-management
          image: us-central1-docker.pkg.dev/tfg-demo-318500/delivery-miso-grupo-17/post_ref003_management:1.0
          ports:
            - containerPort: 3005
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: servicio-post-rf003-management
  annotations:
    cloud.google.com/backend-config: '{"default": "delivery-post-rf003-management-config"}'
spec:
  type: NodePort
  selector:
    app: post-rf003-management
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3005
      nodePort: 30025

---
###################################
# offer-rf004-management
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: offer-rf004-management
  labels:
    app: offer-rf004-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: offer-rf004-management
  template:
    metadata:
      labels:
        app: offer-rf004-management
    spec:
      containers:
        - name: offer-rf004-management
          image: us-central1-docker.pkg.dev/tfg-demo-318500/delivery-miso-grupo-17/offer_rf004_management:1.0
          ports:
            - containerPort: 3013
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: servicio-offer-rf004-management
  annotations:
    cloud.google.com/backend-config: '{"default": "delivery-offer-rf004-management-config"}'
spec:
  type: NodePort
  selector:
    app: offer-rf004-management
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3013
      nodePort: 30113
---
###################################
# post-ref005-management
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-ref005-management
  labels:
    app: post-ref005-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-ref005-management
  template:
    metadata:
      labels:
        app: post-ref005-management
    spec:
      containers:
        - name: post-ref005-management
          image: us-central1-docker.pkg.dev/tfg-demo-318500/delivery-miso-grupo-17/post_ref005_management:1.0

          ports:
            - containerPort: 3006
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: servicio-post-ref005-management
  annotations:
    cloud.google.com/backend-config: '{"default": "delivery-post-ref005-management-config"}'
spec:
  type: NodePort
  selector:
    app: post-ref005-management
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3006
      nodePort: 30114
---
